Adiciona emoji.sty para funcionar no Overleaf

--- a/curso-latex-forma-2020.tex
+++ b/curso-latex-forma-2020.tex
@@ -31,7 +31,9 @@
   \setdefaultlanguage[variant=brazilian]{portuguese}
   \setotherlanguage{english}
 \usepackage[dvipsnames]{xcolor}
-\usepackage{microtype,xspace,multicol,minted,emoji}
+\usepackage{microtype,xspace,multicol,minted}
+\usepackage{emoji}
+\setemojifont{Symbola}
 \usepackage{hyperref}
   % Links com cores menos chamativas
   \hypersetup{
@@ -39,6 +41,7 @@
     citecolor  = MidnightBlue,
     linkcolor  = MidnightBlue,
     urlcolor   = MidnightBlue}
+%
 \usepackage[breakable]{tcolorbox}
 %\usepackage{showframe,fullpage,setspace}
 \usepackage{enumitem}
